[package]
name = "libxc-sys"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
description = "The package provides bindings to Libxc (C)."
homepage = "https://github.com/dftworks/libxc-sys"
readme = "REAME.md"
categories = ["external-ffi-bindings", "science"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
